# digitglance-desktop

./: .gitignore  ANDROID_BUILD.md  README.md  package-lock.json  package.json
.github/workflows/: android.yml  release.yml
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
